--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ LazyData: TRUE
 Depends:
     R(>= 3.1.0),
     phangorn,
-    ape
+    ape,
+    coda
 Imports:
     Rcpp (>= 0.12.1),
     methods,
@@ -24,7 +25,6 @@ Imports:
     utils,
     sp
 Suggests:
-    coda,
     phytools,
     testthat,
     knitr,
