Added branch information into DESCRIPTION file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Implementation the outbreak analysis method described by
     Klinkenberg et al (2017) <doi:10.1371/journal.pcbi.1005495>. 
     Simulate outbreaks, analyse datasets by creating samples from the 
     posterior distribution with a Markov-Chain Monte Carlo sampler, 
-    and summarize the output.
+    and summarize the output. Adapted by Bastiaan van der Roest and Thi Mui Pham. Specifically, this branch allows the inclusion of the last negative test. 
 License: GPL (>=2)
 LazyData: TRUE
 Depends:
@@ -33,3 +33,4 @@ Suggests:
 LinkingTo: Rcpp
 RoxygenNote: 7.2.1
 VignetteBuilder: knitr
+Branch: sampling-interval-test
