Added more in DESCRIPTION file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: Implementation the outbreak analysis method described by
     and summarize the output. Adapted by Bastiaan van der Roest and Thi Mui Pham. Specifically, this branch allows the inclusion of the last negative test. 
 License: GPL (>=2)
 LazyData: TRUE
+Branch: feature/sampling-interval-test
 Depends:
     R(>= 3.1.0),
     phangorn,
@@ -33,4 +34,4 @@ Suggests:
 LinkingTo: Rcpp
 RoxygenNote: 7.2.1
 VignetteBuilder: knitr
-Branch: sampling-interval-test
+
